# telco-churn-mlops

./: .gitignore  README.md  pyproject.toml
docs/: arquitetura.md  baseline-results.json  checklist-final.md  model-card.md  monitoramento.md  perguntas-e-respostas.md  roteiro-star.md  sprint-2-eda-baselines.md  sprints.md
notebooks/: 01_eda_baselines.ipynb
reports/figures/: manifest.json
scripts/: download_data.py
src/telco_churn_mlops/: __init__.py  api.py  baselines.py  config.py  data.py  features.py  inference.py  mlflow_tracking.py  mlp.py  schemas.py  train_baseline_model.py  train_mlp.py
tests/: conftest.py  test_api.py  test_data.py  test_mlflow_tracking.py  test_mlp.py
