[project]
name = "telco-churn-mlops"
version = "0.1.0"
description = "Projeto de previsao de churn em telecomunicacoes com PyTorch, MLflow e FastAPI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "joblib>=1.4.0",
    "mlflow>=2.14.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "scikit-learn>=1.5.0",
    "torch>=2.3.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
